<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/icon_home"
            />
        <item
            android:id="@+id/nav_homework"
            android:title="@string/nav_homework"
            android:icon="@drawable/icon_homework"
            />
        <item
            android:id="@+id/nav_notes"
            android:title="@string/nav_notes"
            android:icon="@drawable/icon_notes"
            />
        <item
            android:id="@+id/nav_progress"
            android:title="@string/nav_progress"
            android:icon="@drawable/icon_progress"
            />
    </group>
</menu>