<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progress_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProgressActivity"
    android:background="@color/white"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    >

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_progress_view"
        app:headerLayout="@layout/main_side_menu_header"
        app:menu="@menu/main_side_menu"
        android:layout_gravity="start"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="0dp"
            android:paddingHorizontal="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="0dp"
            android:background="@drawable/header_background"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <androidx.appcompat.widget.Toolbar
                    app:title=""
                    android:id="@+id/progress_toolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"/>
                <!-- app:navigationIcon="@drawable/bars_solid"-->



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:ems="10"
                    android:text="@string/headerProgress"
                    android:textSize="35sp" />

            </LinearLayout>


            <!--
            (String description, Lecture lecture, String name, int pageNumber, double progress, Date dueDate)
            -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/text_module"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_background"
                    android:layout_marginEnd="5dp"
                    >

                    <Spinner
                        android:id="@+id/progress_spinner_module"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="start"
                        android:autofillHints="lecture"
                        android:dropDownWidth="match_parent"
                        android:padding="10dp"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <EditText
                    android:id="@+id/progress_edit_text_due_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:autofillHints="date"
                    android:background="@drawable/input_background"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/text_date"
                    android:inputType="date"
                    android:padding="10dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/progress_edit_text_lecture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="title"
                android:background="@drawable/input_background"
                android:ems="10"
                android:hint="@string/text_title"
                android:inputType="text"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/progress_edit_text_description"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:autofillHints="description"
                android:background="@drawable/input_background"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/text_description"
                android:inputType="textMultiLine"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/progress_seek_bar_progress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_progress"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/progress_seek_bar_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:max="10"
                android:min="0"
                android:progress="0" />

            <Button
                android:id="@+id/btn_add_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/dhbw_red"
                android:text="@string/text_add"
                android:textSize="20sp"
                android:paddingVertical="10dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>